# BeerMiner

./: .gitignore  README.md  pyproject.toml
BeerMiner/: database.py  main.py
src/beerminer_chroo/: beer.py  database.py  main.py
src/beerminer_chroo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
