[project]
name = "beerminer_chroo"
version = "0.0.2"
authors = [
  { name="JNemec", email="j.nemecc91@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 license",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jnemec91/BeerMiner"
Issues = "https://github.com/jnemec91/BeerMiner/issues"